# devilution-comparer

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  comparer-config.toml  hellfire-comparer-config.toml  removed-functions.toml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: cmdline.rs  compare.rs  comparer_config.rs  corelogic.rs  disasm.rs  generate_full.rs  hexformat.rs  main.rs  pdb.rs
