[package]
name = "devilution-comparer"
version = "0.3.4"
authors = ["Dennis Duda <git@seri.tools>"]
edition = '2018'

[dependencies]
zydis = "0.0.3"
notify = "4"
clap = "2"
regex = "1"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
lazy_static = "^1.1"

# TODO: Replace with toml-rs 0.5 once that version is out (stable support for TOML 0.5)
[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs.git"
branch = "master"